--- a/Project.Web/Views/Leads/LeadHome.cshtml
+++ b/Project.Web/Views/Leads/LeadHome.cshtml
@@ -97,15 +97,15 @@
                                                     <label for="check_@lead.Lead_ID" class="pl-0">&nbsp;</label>
                                                 </div>
                                             </td>
-                                            <td class="text-center">@lead.LeadSource</td>
-                                            <td class="text-center">@lead.DBA</td>
+                                            <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.LeadSource</td>
+                                            <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.DBA</td>
                                             <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.ContName</td>                               
                                             @*<td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.Email</td>*@
                                             <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.bPhone</td>
-                                            <td class="text-center">@lead.CreatedDate</td>
-                                            <td class="text-center">@lead.CreatedByName</td>
-                                            <td class="text-center">@lead.AssignToName</td>
-                                            <td class="text-center">
+                                            <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.CreatedDate</td>
+                                            <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.CreatedByName</td>
+                                            <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.AssignToName</td>
+                                            <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">
                                                 @if (lead.LeadColour == "#ffffff")
                                                 {
                                                     <span class="label label-success" style="background-color:@lead.LeadColour; color:black;border-color:black;">@lead.LeadStatus</span>
@@ -119,7 +119,7 @@
                                             <td class="text-center">
                                                 @if (session.UserPermissionsSession.LeadNotes == "on")
                                                 {
-                                                    <button type="button" class="btn btn-sm btn-outline btn-primary" data-toggle="modal" data-target="#disposition_Modal" title="Change Disposition" onclick="setLeadID('@lead.Lead_ID')" ><i class="ti-pencil"></i></button> 
+                                                    <button type="button" class="btn btn-sm btn-outline btn-primary"  title="Change Disposition" onclick="setDispositionModalData('@lead.Lead_ID')" ><i class="ti-pencil"></i></button> 
                                                 }                                                 
                                                  <button type="button" class="btn btn-sm btn-outline btn-warning" data-toggle="modal" data-target="#Mail_Modal" onclick="setMailData('@lead.Lead_ID','@lead.ContName','@lead.Email');" title="Send Mail"><i class="ti-email"></i></button>
                                                  <button type="button" class="btn btn-sm btn-outline btn-success" data-toggle="modal" data-target="#assignTo_Modal" title="Assign Lead" onclick="setData('@lead.Lead_ID','@lead.AssignToID')"><i class="ti-link"></i></button>                                  
@@ -139,30 +139,32 @@
                                                 <label for="check_@lead.Lead_ID" class="pl-0">&nbsp;</label>
                                             </div>
                                         </td>
-                                       <td class="text-center">@lead.LeadSource</td>
-                                       <td class="text-center">@lead.DBA</td>
-                                       <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.ContName</td>                               
-                                       @*<td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.Email</td>*@
-                                       <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.bPhone</td>
-                                       <td class="text-center">@lead.CreatedDate</td>
-                                       <td class="text-center">@lead.CreatedByName</td>
-                                       <td class="text-center">@lead.AssignToName</td>
-                                        <td class="text-center">
+                                        <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.LeadSource</td>
+                                        <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.DBA</td>
+                                        <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.ContName</td>
+                                        @*<td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.Email</td>*@
+                                        <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.bPhone</td>
+                                        <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.CreatedDate</td>
+                                        <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.CreatedByName</td>
+                                        <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.AssignToName</td>
+                                        <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">
                                             @if (lead.LeadColour == "#ffffff")
-                                             {
-                                                  <span class="label label-success" style="background-color:@lead.LeadColour; color:black;border-color:black;">@lead.LeadStatus</span>
-                                             }
-                                             else
-                                             {
+                                            {
+                                                <span class="label label-success" style="background-color:@lead.LeadColour; color:black;border-color:black;">@lead.LeadStatus</span>
+                                            }
+                                            else
+                                            {
                                                 <span class="label label-success" style="background-color:@lead.LeadColour; color:#fff;">@lead.LeadStatus</span>
                                             }
 
                                         </td>
 
+
+
                                        <td class="text-center">
                                              @if (session.UserPermissionsSession.LeadNotes == "on")
                                              {
-                                                   <button type="button" class="btn btn-sm btn-outline btn-primary" data-toggle="modal" data-target="#disposition_Modal" title="Change Disposition" onclick="setLeadID('@lead.Lead_ID')"><i class="ti-pencil"></i></button>
+                                                   <button type="button" class="btn btn-sm btn-outline btn-primary"  title="Change Disposition" onclick="setDispositionModalData('@lead.Lead_ID')"><i class="ti-pencil"></i></button>
                                              }
                                              <button type="button" class="btn btn-sm btn-outline btn-warning" data-toggle="modal" data-target="#Mail_Modal" onclick="setMailData('@lead.Lead_ID','@lead.ContName','@lead.Email');" title="Send Mail"><i class="ti-email"></i></button>
                                              <button type="button" class="btn btn-sm btn-outline btn-success" data-toggle="modal" data-target="#assignTo_Modal" title="Assign Lead" onclick="setData('@lead.Lead_ID','@lead.AssignToID')"><i class="ti-link"></i></button>                                  
@@ -180,15 +182,15 @@
                                                 <label for="check_@lead.Lead_ID" class="pl-0">&nbsp;</label>
                                             </div>
                                         </td>
-                                       <td class="text-center">@lead.LeadSource</td>
-                                       <td class="text-center">@lead.DBA</td>
-                                       <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.ContName</td>                               
-                                       @*<td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.Email</td>*@
-                                       <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.bPhone</td>
-                                       <td class="text-center">@lead.CreatedDate</td>
-                                       <td class="text-center">@lead.CreatedByName</td>
-                                       <td class="text-center">@lead.AssignToName</td>
-                                        <td class="text-center">
+                                        <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.LeadSource</td>
+                                        <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.DBA</td>
+                                        <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.ContName</td>
+                                        @*<td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.Email</td>*@
+                                        <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.bPhone</td>
+                                        <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.CreatedDate</td>
+                                        <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.CreatedByName</td>
+                                        <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">@lead.AssignToName</td>
+                                        <td class="text-center" onclick="ViewLeads('@lead.Lead_ID')">
                                             @if (lead.LeadColour == "#ffffff")
                                             {
                                                 <span class="label label-success" style="background-color:@lead.LeadColour; color:black;border-color:black;">@lead.LeadStatus</span>
@@ -203,7 +205,7 @@
                                        <td class="text-center">
                                              @if (session.UserPermissionsSession.LeadNotes == "on")
                                              {
-                                                   <button type="button" class="btn btn-sm btn-outline btn-primary" data-toggle="modal" data-target="#disposition_Modal" title="Change Disposition" onclick="setLeadID('@lead.Lead_ID')"><i class="ti-pencil"></i></button>
+                                                   <button type="button" class="btn btn-sm btn-outline btn-primary"  title="Change Disposition" onclick="setDispositionModalData('@lead.Lead_ID')"><i class="ti-pencil"></i></button>
                                              }
                                              <button type="button" class="btn btn-sm btn-outline btn-warning" data-toggle="modal" data-target="#Mail_Modal" onclick="setMailData('@lead.Lead_ID','@lead.ContName','@lead.Email');" title="Send Mail"><i class="ti-email"></i></button>
                                              <button type="button" class="btn btn-sm btn-outline btn-success" data-toggle="modal" data-target="#assignTo_Modal" title="Assign Lead" onclick="setData('@lead.Lead_ID','@lead.AssignToID')"><i class="ti-link"></i></button>                                  
@@ -248,6 +250,20 @@
                             <label for="notes">Notes</label>
                             <textarea id="notes" class="form-control form-cutom"></textarea>                          
                         </div>
+                    </div>
+                    <div class="col-sm-12">
+                        <ul style="list-style-type:none; padding-left:0; max-height:220px; overflow-y:scroll;" id="notesdiv">
+
+                            @*<li class="media">
+                    <div class="media-left"><i class="ti-pencil-alt media-object mo-xs img-circle bg-warning text-center"></i></div>
+                    <div class="media-body">
+                        <h6 class="media-heading"></h6>
+                        <p class="text-muted mb-0"></p>
+                    </div>
+                </li>*@
+
+
+                        </ul>
                     </div>
                 </div>              
             </div>
@@ -390,7 +406,7 @@
                     <div class="col-sm-6">
                         <div class="form-group">
                             <label>Time</label>
-                            <input type="text" class="form-control" placeholder="" id="startTime" />
+                            <input type="text" class="form-control" placeholder="" id="startTime" value="12:00 AM" />
                             <div id="error_div_startTime" style="display:none;">
                                 <p style="color:red;">Please Choose A Time.</p>
                             </div>
@@ -409,7 +425,7 @@
                     <div class="col-sm-12">
                         <div class="form-group">
                             <label>Event Duration (in mnts)</label>
-                            <input id="eventDuration" type="text" class="form-control">
+                            <input id="eventDuration" type="text" class="form-control" value="15">
                             <div id="error_div_eventDuration" style="display:none;">
                                 <p style="color:red;">Please Enter value in multiple 15 mnts.</p>
                             </div>
@@ -451,7 +467,7 @@
 
 <script>
     $(document).ready(function () {
-        $("#startTime").datetimepicker({ locale: "en-gb", format: "LT", stepping: 15, format: 'HH:mm' });
+        $("#startTime").datetimepicker({ locale: "en-gb", format: "LT", stepping: 15 });
         $("#endTime").datetimepicker({ locale: "en-gb", format: "LT", stepping: 15,  format: 'HH:mm' });
     });
 </script>
@@ -497,9 +513,42 @@
 </script>
 
 <script>
-    function setLeadID(Lead_Id) {
-        
+    function setDispositionModalData(Lead_Id) {
+        $.ajax({
+            url: '/Leads/GetDispositionModalData',
+            dataType: "json",
+            type: "POST",
+            contentType: 'application/json; charset=utf-8',
+            data: JSON.stringify({ LeadId: Lead_Id }),
+            async: true,
+            processData: false,
+            cache: false,
+            success: function (data) {
+                if (data != '') {
+                    $('#LeadStatus').val(data.LeadStatus);
+                    $('#notesdiv').html('');
+                    $.each(data.Notes, function (i, foo) {
+                        //alert(this.Title);
+                        $('#notesdiv').append('<li class="media"><div class="media-left"><i class="ti-pencil-alt media-object mo-xs img-circle bg-warning text-center"></i></div>' +
+                        '<div class="media-body">' +
+                        '<h6 class="media-heading">' + this.Title + '</h6>' +
+                        '<p class="text-muted mb-0">' + this.Description + '</p>' + '</div>' + '</li>');
+                    });
+                    $("#disposition_Modal").modal('show');
+                    $(".se-pre-con").hide();
+                }
+                else {
+                    $("#disposition_Modal").modal('show');
+                    $(".se-pre-con").hide();
+                }
+            },
+            error: function (xhr) {
+                $("#disposition_Modal").modal('show');
+                $(".se-pre-con").hide();
+            }
+        });
         $("#lead_id").val(Lead_Id);
+
     }
     function setDisposition() {
         $(".se-pre-con").show();
@@ -775,22 +824,23 @@
             var startTime;
             var tim = $("#startTime").val().split(' ');
             var tim1 = tim[0].split(':')[0].length;
-            alert(tim[0]);
-            alert(tim1);
+           
             if (tim[0].split(':')[0].length = 1) {
                 startTime = '0' + tim[0].split(':')[0] + ':' + tim[0].split(':')[1] + ' ' + tim[1];
-                alert(startTime);
+               
             }
             else {
                 startTime = tim[0];
-                alert(startTime);
+              
             }
-            alert(moment($("#startTime").val(), 'HH:mm').format('HH:mm'));
+            //alert($("#startTime").val());
+            //alert(ConvertTimeformatTo24($("#startTime").val()));
+            //alert(moment(ConvertTimeformatTo24($("#startTime").val()), 'HH:mm').format('HH:mm'));
             
             var dataRow = {
                 'Title': $("#inputTitleEvent").val(),
                 'NewEventDate': moment($("#startDate").val()).format('MM/DD/YY'),
-                'NewEventTime': moment($("#startTime").val(), 'HH:mm').format('HH:mm'),
+                'NewEventTime': moment(ConvertTimeformatTo24($("#startTime").val()), 'HH:mm').format('HH:mm'),
                 'NewEventDuration': $('#eventDuration').val(),
                 'RelatedLead': $('#Rlead').val(),
                 'Description': $('#description').val()
@@ -816,6 +866,22 @@
                 }
             });
         }
+    }
+
+
+    function ConvertTimeformatTo24(str) {
+        var time = str;
+        var hours = Number(time.match(/^(\d+)/)[1]);
+        var minutes = Number(time.match(/:(\d+)/)[1]);
+        var AMPM = time.match(/\s(.*)$/)[1];
+        if (AMPM == "PM" && hours < 12) hours = hours + 12;
+        if (AMPM == "AM" && hours == 12) hours = hours - 12;
+        var sHours = hours.toString();
+        var sMinutes = minutes.toString();
+        if (hours < 10) sHours = "0" + sHours;
+        if (minutes < 10) sMinutes = "0" + sMinutes;
+        // alert(sHours + ":" + sMinutes);
+        return (sHours + ":" + sMinutes);
     }
 
     function cancelEvent() {
